Cleanup and remove TODOs, add context to ShopScreenHandler